# practicalWork6

./: pyproject.toml
tests/: test_taxes.py
